ATLAS-2428: updated README for 0.8.2 release